fix: hide overflow

--- a/apps/frontend/components/AudioPlayer/AudioPlayer.module.css
+++ b/apps/frontend/components/AudioPlayer/AudioPlayer.module.css
@@ -1,5 +1,5 @@
 .playbar {
-  @apply fixed bottom-0 left-0 w-screen bg-grey-dark z-50 py-5 border-t border-grey-medium;
+  @apply fixed bottom-0 left-0 w-screen bg-grey-dark z-50 py-5 border-t border-grey-medium overflow-hidden;
 }
 
 .volume {
@@ -8,4 +8,8 @@
 
 .volume::-webkit-slider-thumb {
   @apply bg-purple cursor-pointer w-5 h-5 appearance-none rounded-full;
+}
+
+.noOverflow wave {
+  overflow: hidden !important;
 }
